--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
 
+<!--[if IE 8]> <html lang="it" class="ie8"> <![endif]-->  
+<!--[if IE 9]> <html lang="it" class="ie9"> <![endif]-->  
+<!--[if !IE]><!--> <html lang="it"> <!--<![endif]--> 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
