--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div id="cover">
         <div id="socialblock">
-            <p id="contentlink"><a id="iconfb" aria-label=" " class="scl" href="https://www.facebook.com/MadonnaSantoRosario/"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a id="iconinst" aria-label=" "  class="scl" href="https://www.instagram.com/madonnasantorosario/"><i class="fab fa-instagram" aria-hidden="true"></i></a><a id="icontweeter" aria-label=" "  class="scl" href="https://twitter.com/madonna_rosario"><i class="fab fa-twitter" aria-hidden="true"></i></a></p>
+            <p id="contentlink"><a id="iconfb" aria-label="facebook" class="scl" href="https://www.facebook.com/MadonnaSantoRosario/"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a id="iconinst" aria-label="instagram"  class="scl" href="https://www.instagram.com/madonnasantorosario/"><i class="fab fa-instagram" aria-hidden="true"></i></a><a id="icontweeter" aria-label="twitter"  class="scl" href="https://twitter.com/madonna_rosario"><i class="fab fa-twitter" aria-hidden="true"></i></a></p>
         </div>
         <div id="centralblock" style="font-family: Adamina, serif;">
             <p id="titleassociation">CONFRATERNITA<br>MADONNA DEL S.ROSARIO</p>
