--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div id="cover">
+    <div id="cover" onload="ready">
         <div id="socialblock">
             <p id="contentlink"><a id="iconfb" aria-label="facebook" class="scl" href="https://www.facebook.com/MadonnaSantoRosario/"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a id="iconinst" aria-label="instagram"  class="scl" href="https://www.instagram.com/madonnasantorosario/"><i class="fab fa-instagram" aria-hidden="true"></i></a><a id="icontwitter" aria-label="twitter"  class="scl" href="https://twitter.com/madonna_rosario"><i class="fab fa-twitter" aria-hidden="true"></i></a></p>
         </div>
