--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Sito Ufficiale | Confraternita Madonna Del Santo Rosario</title>
+	<meta name="keywords" content="Confraternita, Madonna, Santo, Rosario, Casali, Roccapiemonte, Salerno, S. Maria delle grazie">
     <meta name="twitter:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
     <meta name="twitter:image" content="assets/img/cover.jpg">
     <meta property="og:image" content="assets/img/cover.jpg">
