--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <!--[if IE 8]> <html lang="it" class="ie8"> <![endif]-->  
@@ -32,7 +33,9 @@
             <p id="titleassociation">CONFRATERNITA<br>MADONNA DEL S.ROSARIO</p>
             <p id="descriptionpage">Il nuovo website della Confraternita è in fase di sviluppo. Seguici sui nostri canali social per restare aggiornato sulle nostre iniziative ed attività.</p>
             <p id="containerbutton"><button class="btn btn-primary" id="buttonsitovecchio" type="button" onclick="sitostorico()">Visita il Sito Storico</button></p>
-        </div>
+			<div id="seotitle"><h1>CONFRATERNITAMADONNA DEL S.ROSARIO</h1></div>
+			<div id="seodescription"><h2>Il nuovo website della Confraternita è in fase di sviluppo. Seguici sui nostri canali social per restare aggiornato sulle nostre iniziative ed attività.</h2></div>
+		</div>
         <div id="footerblock">
             <p id="sigature">CONFRATERNITA MADONNA DEL SANTO ROSARIO&nbsp;© 2019</p>
         </div>
