--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="socialblock">
             <p id="contentlink"><a id="iconfb" aria-label="facebook"  target="_blank" class="scl" href="https://www.facebook.com/MadonnaSantoRosario/"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a id="iconinst" aria-label="instagram"   target="_blank" class="scl" href="https://www.instagram.com/madonnasantorosario/"><i class="fab fa-instagram" aria-hidden="true"></i></a><a id="icontwitter" aria-label="twitter"  target="_blank" class="scl" href="https://twitter.com/madonna_rosario"><i class="fab fa-twitter" aria-hidden="true"></i></a></p>
         </div>
-        <div id="centralblock" style="font-family: Adamina, serif;">
+        <div id="centralblock">
             <p id="titleassociation">CONFRATERNITA<br>MADONNA DEL S.ROSARIO</p>
             <p id="descriptionpage">Il nuovo website della Confraternita è in fase di sviluppo. Seguici sui nostri canali social per restare aggiornato sulle nostre iniziative ed attività.</p>
             <p id="containerbutton"><button class="btn btn-primary" id="buttonsitovecchio" type="button" onclick="sitostorico()">Visita il Sito Storico</button></p>
