--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <p id="titleassociation">CONFRATERNITA<br>MADONNA DEL S.ROSARIO</p>
             <p id="descriptionpage">Il nuovo website della Confraternita è in fase di sviluppo. Seguici sui nostri canali social per restare aggiornato sulle nostre iniziative ed attività.</p>
             <p id="containerbutton"><button class="btn btn-primary" id="buttonsitovecchio" type="button" onclick="sitostorico()">Visita il Sito Storico</button></p>
-			<div id="seotitle"><h1>CONFRATERNITAMADONNA DEL S.ROSARIO</h1></div>
+			<div id="seotitle"><h1>Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA)</h1></div>
 			<div id="seodescription"><h2>Il nuovo website della Confraternita è in fase di sviluppo. Seguici sui nostri canali social per restare aggiornato sulle nostre iniziative ed attività.</h2></div>
 		</div>
         <div id="footerblock">
-            <p id="sigature">CONFRATERNITA MADONNA DEL SANTO ROSARIO&nbsp;© 2019</p>
+            <p id="sigature">CONFRATERNITA MADONNA DEL SANTO ROSARIO&nbsp;© 2021</p>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
