--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Sito Ufficiale | Confraternita Madonna Del Santo Rosario</title>
+	<link rel="icon" type="image/png" sizes="40x41" href="assets/img/title_image.png">
 	<meta name="author" content="dott. Giuseppe Siani">
 	<meta name="robots" content="index, follow, archive">
 	<meta name="keywords" content="Confraternita, Madonna, Santo, Rosario, Casali, Roccapiemonte, Salerno, S. Maria delle grazie">
-    <meta name="twitter:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
-    <meta name="twitter:image" content="assets/img/cover.jpg">
-    <meta property="og:image" content="assets/img/cover.jpg">
+    <meta name="twitter:title" content="Sito Ufficiale | Confraternita Madonna Del Santo Rosario">
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:image" content="assets/img/cover.jpg">
+	<meta name="twitter:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
     <meta name="description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Sito Ufficiale | Confraternita Madonna Del Santo Rosario">
-    <link rel="icon" type="image/png" sizes="40x41" href="assets/img/title_image.png">
+	<meta property="og:image" content="assets/img/cover.jpg">
+	<meta property="og:url" content="https://www.madonnasantorosario.it/"/>
+	<meta property="og:title" content="Sito Ufficiale | Confraternita Madonna del Santo Rosario"/>
+	<meta property="og:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA)."/>
+	<meta property="og:locale" content="it_IT"/>
+	<meta property="og:site_name" content="Sito Ufficiale | Confraternita Madonna del Santo Rosario"/>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Adamina">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
