--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<meta name="keywords" content="Confraternita, Madonna, Santo, Rosario, Casali, Roccapiemonte, Salerno, S. Maria delle grazie">
     <meta name="twitter:title" content="Sito Ufficiale | Confraternita Madonna Del Santo Rosario">
 	<meta name="twitter:card" content="summary">
-	<meta name="twitter:image" content="assets/img/cover.jpg">
+	<meta name="twitter:image" content="https://www.madonnasantorosario.it/assets/img/cover.jpg">
 	<meta name="twitter:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
     <meta name="description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
     <meta property="og:type" content="website">
-	<meta property="og:image" content="assets/img/cover.jpg">
+	<meta property="og:image" content="https://www.madonnasantorosario.it/assets/img/cover.jpg">
 	<meta property="og:url" content="https://www.madonnasantorosario.it/"/>
 	<meta property="og:title" content="Sito Ufficiale | Confraternita Madonna del Santo Rosario"/>
 	<meta property="og:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA)."/>
