--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 	<meta property="og:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA)."/>
 	<meta property="og:locale" content="it_IT"/>
 	<meta property="og:site_name" content="Sito Ufficiale | Confraternita Madonna del Santo Rosario"/>
+	<meta property="fb:app_id" content="MadonnaSantoRosario"/>
+	<meta name="twitter:site" content="@madonna_rosario"/>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Adamina">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
