--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 	<link rel="icon" type="image/png" sizes="40x41" href="assets/img/title_image.png">
 	<meta name="author" content="dott. Giuseppe Siani">
 	<meta name="robots" content="index, follow, archive">
-	<meta name="keywords" content="Confraternita, Madonna, Santo, Rosario, Casali, Roccapiemonte, Salerno, S. Maria delle grazie">
-	<meta name="description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
+	<meta name="keywords" content="Confraternita, Madonna, Santo, Rosario, Casali, Roccapiemonte, Salerno, S. Maria delle grazie, Diocesi Nocera Inferiore-Sarno">
+	<meta name="description" content="Confraternita Madonna Del Santo Rosario, Diocesi Nocera Inferiore-Sarno, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
     <meta name="twitter:title" content="Sito Ufficiale | Confraternita Madonna Del Santo Rosario">
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:image" content="https://www.madonnasantorosario.it/assets/img/cover.jpg">
-	<meta name="twitter:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
+	<meta name="twitter:description" content="Confraternita Madonna Del Santo Rosario, Diocesi Nocera Inferiore-Sarno, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
 	<meta name="twitter:site" content="@madonna_rosario"/>
     <meta property="og:type" content="website">
 	<meta property="og:image" content="https://www.madonnasantorosario.it/assets/img/cover.jpg">
 	<meta property="og:url" content="https://www.madonnasantorosario.it/"/>
 	<meta property="og:title" content="Sito Ufficiale | Confraternita Madonna del Santo Rosario"/>
-	<meta property="og:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA)."/>
+	<meta property="og:description" content="Confraternita Madonna Del Santo Rosario, Diocesi Nocera Inferiore-Sarno, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA)."/>
 	<meta property="og:locale" content="it_IT"/>
 	<meta property="og:site_name" content="Sito Ufficiale | Confraternita Madonna del Santo Rosario"/>
 	<meta property="fb:app_id" content="MadonnaSantoRosario"/>
