--- a/404.html
+++ b/404.html
@@ -10,12 +10,12 @@
 		<title>Sito Ufficiale | Confraternita Madonna Del Santo Rosario</title>
 		<meta name="twitter:description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
 		<meta name="twitter:image" content="https://www.madonnasantorosario.it/assets/img/cover.jpg">
-		<meta property="og:image" content="assets/img/cover.jpg">
+		<meta property="og:image" content="https://www.madonnasantorosario.it/assets/img/cover.jpg">
 		<meta name="description" content="Confraternita Madonna Del Santo Rosario, Parrocchia Santa Maria delle Grazie, Casali di Roccapiemonte (SA).">
 		<meta property="og:type" content="website">
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:title" content="Sito Ufficiale | Confraternita Madonna Del Santo Rosario">
-		<link rel="icon" type="image/png" sizes="40x41" href="assets/img/title_image.png">
+		<link rel="icon" type="image/png" sizes="40x41" href="https://www.madonnasantorosario.it/assets/img/title_image.png">
 		<link rel="stylesheet" href="https://www.madonnasantorosario.it/assets/css/style404.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
