--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Sito Ufficiale | Confraternita Madonna Del Santo Rosario</title>
-	<link rel="icon" type="image/png" sizes="40x41" href="assets/img/title_image.png">
+	<link rel="icon" type="image/png" sizes="40x41" href="https://www.madonnasantorosario.it/assets/img/title_image.png">
 	<meta name="author" content="dott. Giuseppe Siani">
 	<meta name="robots" content="index, follow, archive">
 	<meta name="keywords" content="Confraternita, Madonna, Santo, Rosario, Casali, Roccapiemonte, Salerno, S. Maria delle grazie, Diocesi Nocera Inferiore-Sarno">
